<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/words_in_database_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:text="@string/words_in_database_label"
            android:textSize="24sp"
            tools:text="Words in database:" />

        <TextView
            android:id="@+id/wordsInDatabase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="sans-serif"
            android:textColor="#FF9800"
            android:textSize="48sp"
            android:typeface="sans" />

        <Button
            android:id="@+id/learn_words_button"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:onClick="learnWords"
            android:text="@string/learn_words"
            app:backgroundTint="#FF5722"
            tools:text="Learn words" />

        <Button
            android:id="@+id/add_words_button2"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:onClick="showDatabase"
            android:text="@string/show_database"
            app:backgroundTint="#FF5722"
            tools:text="Show database" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>